@@ -287,7 +287,7 @@ STATEMENT_SELECT_CATEGORY_TOPICS = \
     from jam_topic, jam_category \
     where jam_topic.topic_id = jam_category.child_topic_id \
     and jam_topic.virtual_wiki_id = ? \
-    and jam_category.category_name = ? \
+    and lower(jam_category.category_name) = ? \
     and jam_topic.topic_type = ? \
     and delete_date is null \
     order by sort_key  
